force-app/main/default/objects/SIGHTS_USER_SETTING_INF__x/SIGHTS_USER_SETTING_INF__x.object-meta.xml
<CustomObject>
    <description>SIGHTS_USER_SETTING_INF</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SIGHTS_USER_SETTING_INF</externalName>
    <label>Sightsユーザー設定情報</label>
</CustomObject>