force-app/main/default/objects/SIGHTS_USER_SETTING_INF__x/fields/cam_display_split__c.field-meta.xml
<CustomField>
    <fullName>cam_display_split__c</fullName>
    <description>cam_display_split</description>
    <externalDeveloperName>cam_display_split</externalDeveloperName>
    <label>cam_display_split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>