force-app/main/default/objects/SIGHTS_USER_SETTING_INF__x/fields/property_mng_id__c.field-meta.xml
<CustomField>
    <fullName>property_mng_id__c</fullName>
    <description>property_mng_id</description>
    <externalDeveloperName>property_mng_id</externalDeveloperName>
    <label>property_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>